--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -8,7 +8,7 @@
 
                <i class="icon-remove hide pull-left" number="<%= category.id%>" belong="kpi" onclick="remove_leftNav(event)"></i>
                <i class="icon-pencil hide pull-left" number="<%= category.id%>" belong="kpi" onclick="edit_leftNav(event)"></i>
-               <a href="../kpis?p=<%= category.id%>"><%= category.name %></a>
+               <a href="../kpis?p=<%= category.id%>"  number="<%= category.id%>" belong="kpi"><%= category.name %></a>
 
           </li>
           <%end%>
