--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
                <%= render :partial=>'shares/menu'%>
                <%= yield %>
           </div>
+          <%= render :partial=>'shares/message_box'%>
      </body>
 </html>
