--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -31,7 +31,7 @@
                          <a class="main-navi-dropitem" href="../users">用户</a>
                     </li>
                     <li>
-                         <a class="main-navi-dropitem" href="">付费</a>
+                         <a class="main-navi-dropitem" href="#">付费</a>
                     </li>
                </ul>
           </li>
