--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
-<h1>STEP 1</h1>
-<h1>STEP 2</h1>
-<h1>STEP 3</h1>
+<div class="middle clearfix" style=" margin-left: 400px; margin-top:10px;"> 
+     <div class="right-content pull-left" id="right-content">
+<img src="/assets/queen.png" />
+</div>
+</div>
