--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -756,4 +756,30 @@ input.entry-kpi-date{
     height:100%;
     background-color:white;
 }
+/***************************************************** login 注册什么的 **************************************************************/
+.login-sub-middle{
+    background-color:#f4f4f4;
+    border-top:1px solid #ddd;
+    box-shadow:0 1px 2px rgba(0,0,0,0.45);
+    -moz-box-shadow:0 1px 2px rgba(0,0,0,0.45);
+    -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.45);
+    padding:40px 10px;
+}
+.login-form{
+    width:220px;
+    margin:0 auto;
+}
+.error_explanation>h4{
+    text-align:center
+}
+.error_explanation>ul{
+    list-style:none;
+    margin-left:0;
+}
+.error_explanation>ul li{
+    text-align:center;
+    color:#f39c12;
+    word-break:break-all;
+    word-wrap:break-word;
 
+}
