--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -4,7 +4,7 @@
      <div class="top-tool pull-right">
           <a class="tool-setting" data-placement="bottom" data-animation=false id="tool-setting" title="设置" > </a>
           <a class="tool-help" data-placement="bottom" data-animation=false id="tool-help" title="帮助"> </a>
-          <a class="tool-user" data-placement="bottom" data-animation=false id="tool-user" title="账户"> </a>
+          <a class="tool-user" data-placement="bottom" data-animation=false id="tool-user" title="账户" onclick="$('#setting-right').show('2000')"> </a>
      </div>
 </div>
 <div class="page-navi clearfix">
