--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -25,10 +25,13 @@
                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 管理<b class="caret"></b> </a>
                <ul class="dropdown-menu">
                     <li>
-                         <a class="main-navi-dropitem" href="<%=kpis_path%>">KPI</a>
+                         <a class="main-navi-dropitem" href="<%= kpis_path%>">KPI</a>
                     </li>
                     <li>
-                         <a class="main-navi-dropitem" href="<%=users_path%>">用户</a>
+                         <a class="main-navi-dropitem" href="<%= users_path%>">用户</a>
+                    </li>
+                    <li>
+                         <a class="main-navi-dropitem" href="<%= entity_groups_path%>">观察点</a>
                     </li>
                     <li>
                          <a class="main-navi-dropitem" href="#">付费</a>
